--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title> JS Test </title>
 </head>
 <body>
-    
+    <h1> The total sum is: </h1>
+    <button id="btn1"> Submit </button>
+
+    <h2 id="heading-two"> sample text </h2>
+    <p id="para1"> this is sample para </p>
+
+    <form action="test.html" id="form1">
+        <h4> Login Page </h4>
+        <input type="text" id="username" placeholder="username">
+        <input type="password" id="password" placeholder="password">
+        <input type="submit" value="Login">
+    </form>
 
     <script src="script.js"></script>
 </body>
